--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-Golden River Games Official<br />
-<br />
-<p>
-<a href="/privacy-policy.html">Privay Policy</a>
-</p>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Golden River Games</title>
+</head>
+<body>
+  Golden River Games Official<br />
+  <br />
+  <p>
+  <a href="/privacy-policy.html">Privay Policy</a>
+  </p>
+</body>
+</html>
